# cvac

./: .gitignore  README.md  cv_to_docx.py  cvac.py  pyproject.toml
Claude/: CLAUDE.md  PLAN.md
examples/: comprehensive-cv.yaml  elegant_style.yaml  modern_style.json  sample_cv.yaml  standard-style.yaml
schema/: cv.schema.json  style.schema.json
src/: cv-to-docx.py  cv_to_docx.py  style.py
src/cvac/: __init__.py  __main__.py  cv_to_docx.py  style.py
src/cvac/commands/: convert.py  generate.py  validate.py
src/cvac/core/: data_handler.py  style_loader.py
tests/: test_converter.py  test_data_handler.py  test_data_validation.py  test_document_generation.py  test_style_loader.py
